--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  email: MyString
-  password_digest: MyString
+courtney:
+  name: Courtney Noonan
+  email: courtney@example.com
+  password_digest: <%= User.digest('password')
 
-two:
-  name: MyString
-  email: MyString
-  password_digest: MyString
+james:
+  name: James Bibby
+  email: james@example.com
+  password_digest: User.digest('password')
